# dtx2midi

./: .gitignore  LICENSE  Makefile  README.md  dtx2midi-haskell.cabal  dtx2midi.cabal  package.yaml  stack.yaml
.github/workflows/: build.yml  haskell.yml
app/: Main.hs
src/: DTX.hs  DTX2MIDI.hs  DtxParser.hs
src/DTX/: Parse.hs  Parser.hs
src/DTX2MIDI/: DTX.hs  MIDI.hs
src/DTX2MIDI/DTX/: Parser.hs
test/: DTX2MIDISpec.hs
test/DTX/: ParseSpec.hs  ParserSpec.hs
test/DTX2MIDI/: DTX2MIDISpec.hs  DTXSpec.hs  MIDISpec.hs
test/DTX2MIDI/DTX/: ParserSpec.hs
