name:                dtx2midi
version:             0.1.0.0
synopsis:            .dtx -> .midi converter
description:         Please see README.md
homepage:            http://github.com/akiomik/dtx2midi
license:             BSD3
license-file:        LICENSE
author:              Akiomi KAMAKURA
maintainer:          akiomik@gmail.com
copyright:           2015 Akiomi Kamakura
category:            Tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DTX.Parse
                       DTX2MIDI
  extensions:          OverloadedStrings
                       TemplateHaskell
  build-depends:       base >= 4.7 && < 5
                     , conduit >= 1.0
                     , conduit-extra
                     , attoparsec
                     , resourcet
                     , text
                     , bytestring
                     , haskore
                     , data-accessor
                     , midi
  default-language:    Haskell2010

executable dtx2midi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dtx2midi
                     , haskore
  default-language:    Haskell2010

test-suite dtx2midi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dtx2midi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akiomik/dtx2midi
